charon/tests/ui/issue-393-shallowinitbox.out
error: Unexpected `ShallowInitBox`
 --> tests/ui/issue-393-shallowinitbox.rs:3:1
  |
3 | / fn next(iter: &mut std::vec::IntoIter<u8>) -> Option<Vec<u8>> {
4 | |     Some(vec![iter.next()?])
5 | | }
  | |_^

error: aborting due to 1 previous error

ERROR Compilation encountered 1 errors
